basis cleanup (Phase 1), license change to CDDL 1.1, minor bug fixes

--- a/templates/help/help.html
+++ b/templates/help/help.html
@@ -1,4 +1,4 @@
-<font>
+<aside>
 	<p><b><TMPL_VAR HELP.CAM_SELECT_LABEL>:            </b> <TMPL_VAR HELP.CAM_SELECT_TEXT></p>
 	<p><b><TMPL_VAR HELP.ADD_CAM_LABEL>:               </b> <TMPL_VAR HELP.ADD_CAM_LABEL></p>
 	<hr>
@@ -7,12 +7,12 @@
 	<p><b><TMPL_VAR HELP.CAM_NAME_LABEL>:              </b> <TMPL_VAR HELP.CAM_NAME_TEXT></p>
 	<p><b><TMPL_VAR HELP.CAM_NOTE_LABEL>:              </b> <TMPL_VAR HELP.CAM_NOTE_TEXT></p>
 	<p><b><TMPL_VAR HELP.CAM_MODEL_LABEL>:             </b> <TMPL_VAR HELP.CAM_MODEL_TEXT></p>
-	<p><b><TMPL_VAR HELP.CAM_IMG_WIDTH_LABEL>:         </b> <TMPL_VAR HELP.CAM_IMG_WIDTH_TEXT></p>
 	<p><b><TMPL_VAR HELP.CAM_IPHOST_LABEL>:            </b> <TMPL_VAR HELP.CAM_IPHOST_TEXT></p>
 	<p><b><TMPL_VAR HELP.CAM_PORT_LABEL>:              </b> <TMPL_VAR HELP.CAM_PORT_TEXT></p>
 	<p><b><TMPL_VAR HELP.CAM_USERNAME_LABEL>:          </b> <TMPL_VAR HELP.CAM_USERNAME_TEXT></p>
 	<p><b><TMPL_VAR HELP.CAM_PASSWORD_LABEL>:          </b> <TMPL_VAR HELP.CAM_PASSWORD_TEXT></p>
-	<p><b><TMPL_VAR HELP.CAM_WATERMARK_LABEL>:         </b> <TMPL_VAR HELP.CAM_WATERMARK_TEXT></p>
+	<p><b><TMPL_VAR HELP.CAM_IMG_WIDTH_LABEL>:         </b> <TMPL_VAR HELP.CAM_IMG_WIDTH_TEXT></p>
+	<p><b><TMPL_VAR HELP.WATERMARK_LABEL>:             </b> <TMPL_VAR HELP.WATERMARK_TEXT></p>
 	<p><b><TMPL_VAR HELP.CAM_EMAIL_LABEL>:             </b> <TMPL_VAR HELP.CAM_EMAIL_TEXT></p>
 	<hr>
 	<p><b><TMPL_VAR HELP.CAM_EMAIL_RECIPIENTS_LABEL>:  </b> <TMPL_VAR HELP.CAM_EMAIL_RECIPIENTS_TEXT></p>
@@ -27,4 +27,4 @@
 	<hr>
 	<p><b><TMPL_VAR HELP.CAM_LOG_RESTART_LABEL>:       </b> <TMPL_VAR HELP.CAM_LOG_RESTART_TEXT></p>
 	<p><b><TMPL_VAR HELP.CAM_LOG_OPEN_LABEL>:          </b> <TMPL_VAR HELP.CAM_LOG_OPEN_TEXT></p>
-</font>
+</aside>
