--- a/templates/error.html
+++ b/templates/error.html
@@ -1,5 +1,7 @@
+<div id="error_page">
 <h2><TMPL_VAR ERR_TITLE></h2>
 <p><TMPL_VAR ERR_MESSAGE></p>
 <p><a id="btnback" onclick="location.href='<TMPL_VAR ERR_NEXTURL>'"
 	class="ui-btn ui-btn-inline ui-mini ui-corner-all ui-btn-icon-left ui-icon-delete"
-	><TMPL_VAR ERR_BUTTON_BACK></a></p>
+	><TMPL_VAR ERR_BACK></a></p>
+</div>
