--- a/templates/help/help.html
+++ b/templates/help/help.html
@@ -1,30 +1,75 @@
 <aside>
-	<p><b><TMPL_VAR HELP.CAM_SELECT_LABEL>:            </b> <TMPL_VAR HELP.CAM_SELECT_TEXT></p>
-	<p><b><TMPL_VAR HELP.ADD_CAM_LABEL>:               </b> <TMPL_VAR HELP.ADD_CAM_LABEL></p>
-	<hr>
-	<p><b><TMPL_VAR HELP.JUMP_CAM_SELECT_LABEL>:       </b> <TMPL_VAR HELP.JUMP_CAM_SELECT_TEXT></p>
-	<p><b><TMPL_VAR HELP.DEL_CAM_LABEL>:               </b> <TMPL_VAR HELP.DEL_CAM_TEXT></p>
-	<p><b><TMPL_VAR HELP.CAM_NAME_LABEL>:              </b> <TMPL_VAR HELP.CAM_NAME_TEXT></p>
-	<p><b><TMPL_VAR HELP.CAM_NOTE_LABEL>:              </b> <TMPL_VAR HELP.CAM_NOTE_TEXT></p>
-	<p><b><TMPL_VAR HELP.CAM_MODEL_LABEL>:             </b> <TMPL_VAR HELP.CAM_MODEL_TEXT></p>
-	<p><b><TMPL_VAR HELP.CAM_IPHOST_LABEL>:            </b> <TMPL_VAR HELP.CAM_IPHOST_TEXT></p>
-	<p><b><TMPL_VAR HELP.CAM_PORT_LABEL>:              </b> <TMPL_VAR HELP.CAM_PORT_TEXT></p>
-	<p><b><TMPL_VAR HELP.CAM_USERNAME_LABEL>:          </b> <TMPL_VAR HELP.CAM_USERNAME_TEXT></p>
-	<p><b><TMPL_VAR HELP.CAM_PASSWORD_LABEL>:          </b> <TMPL_VAR HELP.CAM_PASSWORD_TEXT></p>
-	<p><b><TMPL_VAR HELP.CAM_IMG_WIDTH_LABEL>:         </b> <TMPL_VAR HELP.CAM_IMG_WIDTH_TEXT></p>
-	<p><b><TMPL_VAR HELP.WATERMARK_LABEL>:             </b> <TMPL_VAR HELP.WATERMARK_TEXT></p>
-	<p><b><TMPL_VAR HELP.CAM_EMAIL_LABEL>:             </b> <TMPL_VAR HELP.CAM_EMAIL_TEXT></p>
-	<hr>
-	<p><b><TMPL_VAR HELP.CAM_EMAIL_RECIPIENTS_LABEL>:  </b> <TMPL_VAR HELP.CAM_EMAIL_RECIPIENTS_TEXT></p>
-	<p><b><TMPL_VAR HELP.CAM_EMAIL_SENDER_LABEL>:      </b> <TMPL_VAR HELP.CAM_EMAIL_SENDER_TEXT></p>
-	<p><b><TMPL_VAR HELP.CAM_EMAIL_SUBJECT_LABEL>:     </b> <TMPL_VAR HELP.CAM_EMAIL_SUBJECT_TEXT></p>
-	<p><b><TMPL_VAR HELP.CAM_EMAIL_TEXT_LABEL>:        </b> <TMPL_VAR HELP.CAM_EMAIL_TEXT_TEXT></p>
-	<p><b><TMPL_VAR HELP.CAM_EMAIL_SIGNATURE_LABEL>:   </b> <TMPL_VAR HELP.CAM_EMAIL_SIGNATURE_TEXT></p>
-	<p><b><TMPL_VAR HELP.CAM_EMAIL_WIDTH_LABEL>:       </b> <TMPL_VAR HELP.CAM_EMAIL_WIDTH_TEXT></p>
-	<p><b><TMPL_VAR HELP.CAM_EMAIL_INLINE_LABEL>:      </b> <TMPL_VAR HELP.CAM_EMAIL_INLINE_TEXT></p>
-	<p><b><TMPL_VAR HELP.CAM_EMAIL_DISABLE_LABEL>:     </b> <TMPL_VAR HELP.CAM_EMAIL_DISABLE_TEXT></p>
-	<p><b><TMPL_VAR HELP.CAM_EMAIL_MULTI_LABEL>:       </b> <TMPL_VAR HELP.CAM_EMAIL_MULTI_TEXT></p>
-	<hr>
-	<p><b><TMPL_VAR HELP.CAM_LOG_RESTART_LABEL>:       </b> <TMPL_VAR HELP.CAM_LOG_RESTART_TEXT></p>
-	<p><b><TMPL_VAR HELP.CAM_LOG_OPEN_LABEL>:          </b> <TMPL_VAR HELP.CAM_LOG_OPEN_TEXT></p>
+<dl>
+	<dt><TMPL_VAR CC.CAM_SELECT_OPTION></dt>
+	<dd><TMPL_VAR CC.CAM_SELECT_HELP></dd>
+
+	<dt><TMPL_VAR CC.CREATE_CAM></dt>
+	<dd><TMPL_VAR CC.CREATE_CAM_HELP></dd>
+
+	<dt class="next"><TMPL_VAR CC.CAM_SELECTION_SCROLL></dt>
+	<dd><TMPL_VAR CC.CAM_SELECTION_SCROLL_HELP></dd>
+
+	<dt><TMPL_VAR CC.DELETE_CAM></dt>
+	<dd><TMPL_VAR CC.DELETE_CAM_HELP></dd>
+
+	<dt><TMPL_VAR CC.NAME></dt>
+	<dd><TMPL_VAR CC.NAME_HELP></dd>
+
+	<dt><TMPL_VAR CC.NOTE></dt>
+	<dd><TMPL_VAR CC.NOTE_HELP></dd>
+
+	<dt><TMPL_VAR CC.MODEL></dt>
+	<dd><TMPL_VAR CC.MODEL_HELP></dd>
+
+	<dt><TMPL_VAR CC.ADDR></dt>
+	<dd><TMPL_VAR CC.ADDR_HELP></dd>
+
+	<dt><TMPL_VAR CC.PORT></dt>
+	<dd><TMPL_VAR CC.PORT_HELP></dd>
+
+	<dt><TMPL_VAR CC.USERNAME></dt>
+	<dd><TMPL_VAR CC.USERNAME_HELP></dd>
+
+	<dt><TMPL_VAR CC.PW></dt>
+	<dd><TMPL_VAR CC.PW_HELP></dd>
+
+	<dt><TMPL_VAR CC.IMG_WIDTH></dt>
+	<dd><TMPL_VAR CC.IMG_WIDTH_HELP></dd>
+
+	<dt><TMPL_VAR CC.WATERMARK></dt>
+	<dd><TMPL_VAR CC.WATERMARK_HELP></dd>
+
+	<dt><TMPL_VAR CC.MAIL></dt>
+	<dd><TMPL_VAR CC.MAIL_HELP></dd>
+
+	<dt class="next"><TMPL_VAR CC.RECIPIENTS></dt>
+	<dd><TMPL_VAR CC.RECIPIENTS_HELP></dd>
+
+	<dt><TMPL_VAR CC.MAIL_FROM></dt>
+	<dd><TMPL_VAR CC.MAIL_FROM_HELP></dd>
+
+	<dt><TMPL_VAR CC.MAIL_SUBJECT></dt>
+	<dd><TMPL_VAR CC.MAIL_SUBJECT_HELP></dd>
+
+	<dt><TMPL_VAR CC.MAIL_BODY></dt>
+	<dd><TMPL_VAR CC.MAIL_BODY_HELP></dd>
+
+	<dt><TMPL_VAR CC.MAIL_SIG></dt>
+	<dd><TMPL_VAR CC.MAIL_SIG_HELP></dd>
+
+	<dt><TMPL_VAR CC.MAIL_IMG_INLINE></dt>
+	<dd><TMPL_VAR CC.MAIL_IMG_INLINE_HELP></dd>
+
+	<dt><TMPL_VAR CC.IMG_WIDTH></dt>
+	<dd><TMPL_VAR CC.MAIL_IMG_WIDTH_HELP></dd>
+
+	<dt><TMPL_VAR CC.MAIL_PICS> <var>X</var> <TMPL_VAR CC.MAIL_PICS_P> <var>N</var> <TMPL_VAR CC.MAIL_PICS_TP></dt>
+	<dd><TMPL_VAR CC.MAIL_PICS_HELP></dd>
+
+	<dt class="next"><TMPL_VAR CC.LOG_DELETE></dt>
+	<dd><TMPL_VAR CC.LOG_DELETE_HELP></dd>
+
+	<dt><TMPL_VAR CC.LOG_VIEW></dt>
+	<dd><TMPL_VAR CC.LOG_VIEW_HELP></dd>
+</dl>
 </aside>
