--- a/templates/success.html
+++ b/templates/success.html
@@ -1,5 +1,7 @@
+<div id="success_page">
 <h2><TMPL_VAR SAVE_ALL_OK></h2>
 <p><TMPL_VAR SAVE_MESSAGE></p>
 <p><a id="btnok" data-role="button" data-inline="true" data-mini="true"
 	data-icon="check" onclick="location.href='<TMPL_VAR SAVE_NEXTURL>'"
 		><TMPL_VAR SAVE_BUTTON_OK></a></p>
+</div>
